# crosslink_monolith

./: .gitignore  README.md
.github/workflows/: ci.yaml  coverage.yaml  test.yaml
.zed/: debug.json
zaino/: Cargo.toml
zaino/integration-tests/: Cargo.toml
zaino/zaino-common/src/config/: network.rs
zaino/zaino-fetch/: Cargo.toml
zaino/zaino-fetch/src/chain/: transaction.rs
zaino/zaino-fetch/src/jsonrpsee/: response.rs
zaino/zaino-state/: Cargo.toml
zaino/zaino-state/src/local_cache/: non_finalised_state.rs
zaino/zaino-testutils/: Cargo.toml
zaino/zainod/src/: config.rs
zebra-crosslink/: Cargo.toml
zebra-crosslink/zebra-chain/src/: transaction.rs
zebra-crosslink/zebra-chain/src/parameters/: network.rs
zebra-crosslink/zebra-chain/src/transaction/: arbitrary.rs
zebra-crosslink/zebra-chain/src/transaction/tests/: vectors.rs
zebra-crosslink/zebra-crosslink/: Cargo.toml
zebra-crosslink/zebra-crosslink/src/: lib.rs
zebra-crosslink/zebra-crosslink/wallet/: Cargo.toml
zebra-crosslink/zebra-crosslink/wallet/src/: lib.rs
zebra-crosslink/zebra-rpc/src/: methods.rs
zebra-crosslink/zebra-rpc/tests/: serialization_tests.rs
zebra-crosslink/zebrad/src/: application.rs
zebra-crosslink/zebrad/src/commands/: start.rs
zebra-gui/src/: lib.rs  ui.rs
zingo-common/: Cargo.toml
zingo-common/zingo_netutils/: Cargo.toml
zingo-infrastructure/: Cargo.toml
zingo-infrastructure/zcash_local_net/: Cargo.toml
zingo-lib/: Cargo.toml
zingo-lib/.config/: nextest.toml
zingo-lib/.github/workflows/: ci-nightly.yaml
zingo-lib/darkside-tests/: Cargo.toml
zingo-lib/libtonode-tests/: Cargo.toml
zingo-lib/zingo-cli/: Cargo.toml
zingo-lib/zingolib/: Cargo.toml
zingo-lib/zingolib_testutils/: Cargo.toml
zingolib/: Cargo.toml
