#  The order of the members reflects a dimension of the dependency relation, the first four depend on
#     *  zingolib
#  which depends in turn, on the bottom 3.
#  This doesn't account for all dependency relations, for example, zingocli depends on zingoconfig directly (for now).
[workspace]
members = [
    "libtonode-tests",
    "darkside-tests",
    "zingo-cli",
    "zingolib",
    "zingo-memo",
    "pepper-sync",
    "zingo-price", "zingolib_testutils",
]
resolver = "2"

[workspace.dependencies]
bip0039 = { version = "0.12", features = ["rand"] }
bip32 = { version = "0.6.0-pre.1", default-features = false }

zip32 = "0.2.0"
orchard = "0.11.0"
sapling-crypto = "0.5.0"
incrementalmerkletree = "0.8.2"
shardtree = "0.6.1"
zcash_address = { path = "../librustzcash/components/zcash_address" } # version = "0.10"
zcash_client_backend = { path = "../librustzcash/zcash_client_backend", features = ["lightwalletd-tonic", "orchard", "transparent-inputs", "tor"] } # version = "0.20"
zcash_encoding = { path = "../librustzcash/components/zcash_encoding" } # version = "0.3"
zcash_keys = { path = "../librustzcash/zcash_keys", features = ["transparent-inputs", "sapling", "orchard"] } # version = "0.12"
zcash_note_encryption = "0.4"
zcash_primitives = { path = "../librustzcash/zcash_primitives" } # version = "0.26"
zcash_proofs = { path = "../librustzcash/zcash_proofs" } # version = "0.26"
zcash_protocol = { path = "../librustzcash/components/zcash_protocol" } # version = "0.7"
zcash_transparent = { path = "../librustzcash/zcash_transparent" } # version = "0.6"

zebra-chain = { path = "../zebra-crosslink/zebra-chain" } # version = "3.0"

zingo_netutils = { path = "../zingo-common/zingo_netutils" }
zingo_common_components = { path = "../zingo-common/zingo_common_components" }

append-only-vec = "0.1.7"
bech32 = "0.11.0"
bs58 = "0.5"
byteorder = "1"
bytes = "1"
chrono = "0.4"
clap = "4"
concat-idents = "1"
dirs = "6"
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
http = "1"
http-body-util = "0.1"
http-body = "1"
hyper-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "0.27", features = ["http2"] }
indoc = "2"
itertools = "0.14"
json = "0.12"
jubjub = "0.10"
log = "0.4"
log4rs = "1"
memuse = "0.2"
nonempty = "0.11.0"
portpicker = "0.1"
proptest = "1.6.0"
prost = "0.13"
rand = "0.8"
reqwest = { version = "0.12.15", default-features = false }
ring = "0.17"
rusqlite = "0.32"
rust_decimal = "1.37.2"
rust-embed = "6"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rustyline = "11"
secp256k1 = "0.29.1"
secrecy = "0.8"
serde = "1"
serde_json = "1"
shellwords = "1"
subtle = "2"
tempfile = "3"
thiserror = "2"
tokio = "1"
tokio-rustls = "0.26"
tonic = { version = "0.13", features = ["tls-webpki-roots"] }
tonic-build = "0.13"
tower = { version = "0.5" }
tracing = "0.1"
tracing-subscriber = "0.3"
webpki-roots = "0.25"

# Parallel processing
crossbeam-channel = "0.5"
rayon = "1"

# Documentation
simple-mermaid = "0.2.0"

# Workspace
zingo-memo = { path = "zingo-memo" }
zingo-price = { path = "zingo-price" }
zingo-status = { path = "zingo-status" }
pepper-sync = { path = "pepper-sync" }
zingolib = { path = "zingolib" }

# Test Attributes
test-log = "0.2"

[profile.test]
opt-level = 3
