[package]
name = "zaino-testutils"
description = "Crate containing Zaino test specific functionality."
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = false

[dependencies]
# Zaino
zaino-proto = { workspace = true }
zaino-state = { workspace = true, features = ["test_dependencies"] }
zaino-serve.workspace = true
zaino-testvectors.workspace = true
zaino-common.workspace = true
zainod = { workspace = true }

# Librustzcash
zcash_protocol = { path = "../../librustzcash/components/zcash_protocol", features = ["local-consensus"] }
zcash_client_backend = { path = "../../librustzcash/zcash_client_backend", features = ["lightwalletd-tonic"] }

# Zebra
zebra-chain = { workspace = true }
zebra-state.workspace = true

# Zingo-infra
zcash_local_net = { path = "../../zingo-infrastructure/zcash_local_net" }
zingo_test_vectors = { path = "../../zingo-infrastructure/zingo_test_vectors" }

# Zingo-common
zingo_common_components = { path = "../../zingo-common/zingo_common_components", features = [ "for_test" ] }
zingo_netutils = { path = "../../zingo-common/zingo_netutils" }

# ZingoLib
zingolib = { workspace = true }

# Miscellaneous
http = { workspace = true }
once_cell = { workspace = true }
portpicker = { workspace = true }
tokio = { workspace = true }
tonic = { version = "0.13" } # TODO: unify in the workspace
tempfile = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "env-filter",
    "time",
] }

# We don't need this as a direct dependency.
# Rather, we need to pin this version of proptest.
# if we don't, cargo update will update to the semver-compatible
# version 1.7, which depends on rand-0.9.1.
# This causes compiler errors in incrementalmerkletree, due a conflict
# with its rand version of 0.8.5.
# TODO: Investigate whether proptest has violated semver guarentees with
# its rand version update.
proptest = { workspace = true }
lazy_static = { workspace = true }
zip32 = {workspace = true}
